# The-Family-Tree-Management-System

./: .gitignore  CMakeLists.txt  README.md
include/database/: DatabaseManager.hpp  SQLiteConnector.hpp
include/models/: FamilyTree.hpp  Person.hpp  Relationship.hpp
include/ui/: FamilyTreeUI.hpp
src/: main.cpp
src/database/: DatabaseManager.cpp  SQLiteConnector.cpp
src/models/: FamilyTree.cpp  Person.cpp  Relationship.cpp
src/services/: RelationshipCalculator.cpp  TreeManager.cpp
src/ui/: FamilyTreeUI.cpp
src/utils/: DataValidator.cpp  DateFormatter.cpp  FileHandler.cpp
